Add README and image in project. Clean up imports in notebook.

--- a/blob_track.ipynb
+++ b/blob_track.ipynb
@@ -20,11 +20,7 @@
     "import cv2\n",
     "import mediapipe as mp\n",
     "from ultralytics import YOLO\n",
-    "import os\n",
-    "import numpy as np\n",
-    "from collections import deque\n",
-    "import colorsys\n",
-    "import math"
+    "import os"
    ]
   },
   {
